# agnes-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.release  Dockerfile.scratch  README.md  build.rs  config.example.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  serve_cmd.rs
src/config/: mod.rs
src/error/: mod.rs
src/server/: handler.rs  mod.rs  transport.rs
src/tools/: agnes_client.rs  chat.rs  health.rs  image.rs  image_recognition.rs  mod.rs  prompt.rs  video.rs
src/utils/: mod.rs
tests/: unit.rs
